@@ -1,3 +1,16 @@
+2013-06-05  Manjunath Matti <mmatti@caviumnetworks.com>
+
+	Backported from mainline 
+	2012-11-21  Wei Mi  <wmi@google.com>
+
+	* common.opt: Change faddress-sanitizer to fsanitize=address.
+	* toplev.c (process_options): Likewise.
+	* gcc.c (LINK_COMMAND_SPEC): Likewise.
+	* testsuite/lib/asan-dg.exp
+	(check_effective_target_faddress_sanitizer): Likewise.
+	(asan_init): Likewise.
+	* doc/invoke.texi (-fsanitize=address): Document.
+
 2013-06-13  Andrew Pinski  <apinski@cavium.com>
 
 	* asan.c (asan_make_ssa_name): New function for 4.7 compatibility.
